fix bug: --no-nsfw_checker --no-safety_checker

--- a/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
@@ -13,7 +13,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "cd4c4a10-177e-4961-afa4-6904e8ec400e",
-      "metadata": {},
+      "metadata": {
+        "jupyter": {
+          "source_hidden": true
+        }
+      },
       "outputs": [],
       "source": [
         "import os,sys\n",
@@ -69,7 +73,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "1f113de7-2801-475c-be0a-c804fb6ae00b",
-      "metadata": {},
+      "metadata": {
+        "jupyter": {
+          "source_hidden": true
+        }
+      },
       "outputs": [],
       "source": [
         "import sys\n",
@@ -92,7 +100,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e3b8164a-fc51-4e9e-a5c6-968bfd77d813",
-      "metadata": {},
+      "metadata": {
+        "jupyter": {
+          "source_hidden": true
+        }
+      },
       "outputs": [],
       "source": [
         "import os\n",
@@ -145,7 +157,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "c7d882c0-ad8c-4130-87b3-e1af72b5f997",
-      "metadata": {},
+      "metadata": {
+        "jupyter": {
+          "source_hidden": true
+        }
+      },
       "outputs": [],
       "source": [
         "port = 6006\n",
@@ -173,6 +189,8 @@
         "    lines[i] = re.sub(r'--outdir=\"(.*)\"', f'--outdir=\"{invoke_outputs_dir}\"', line)\n",
         "\n",
         "#\u8ffd\u52a0\u989d\u5916\u7684\u53c2\u6570\n",
+        "add_line(lines,'--no-nsfw_checker')\n",
+        "add_line(lines,'--no-safety_checker')\n",
         "add_line(lines,f'--port={port}') #\u8bbe\u5b9a\u7aef\u53e3\n",
         "add_line(lines,'--web') #\u4ee5webui\u7684\u5f62\u5f0f\u542f\u52a8\n",
         "\n",
@@ -207,7 +225,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "9e08c483-40f6-41e1-be01-4f0c013833de",
-      "metadata": {},
+      "metadata": {
+        "jupyter": {
+          "source_hidden": true
+        }
+      },
       "outputs": [],
       "source": [
         "base_args = [\n",
@@ -252,14 +274,6 @@
         "print(final_cmd)\n",
         "!$final_cmd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9f2cb222-a298-4581-9c38-97db20dc0e98",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
