no need auto update in launcher

--- a/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
@@ -157,11 +157,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "c7d882c0-ad8c-4130-87b3-e1af72b5f997",
-      "metadata": {
-        "jupyter": {
-          "source_hidden": true
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "port = 6006\n",
@@ -187,6 +183,7 @@
         "# \u8fdb\u884c\u6587\u672c\u66ff\u6362\n",
         "for i, line in enumerate(lines):\n",
         "    lines[i] = re.sub(r'--outdir=\"(.*)\"', f'--outdir=\"{invoke_outputs_dir}\"', line)\n",
+        "    lines[i] = re.sub(r'--nsfw_checker', f'--no-nsfw_checker', line)\n",
         "\n",
         "#\u8ffd\u52a0\u989d\u5916\u7684\u53c2\u6570\n",
         "add_line(lines,'--no-nsfw_checker')\n",
@@ -225,11 +222,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "9e08c483-40f6-41e1-be01-4f0c013833de",
-      "metadata": {
-        "jupyter": {
-          "source_hidden": true
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "base_args = [\n",
@@ -239,24 +232,25 @@
         "    f'cd {InvokeAI_dir}','&&'\n",
         "]\n",
         "\n",
-        "final_args = []\n",
-        "final_args += base_args\n",
+        "final_args = base_args[:]\n",
         "\n",
-        "git_pull_args = base_args[:] + ['git pull']\n",
-        "git_pull_cmd = (\" \").join(git_pull_args)\n",
+        "# #\u4e0d\u8fdb\u884c\u66f4\u65b0\n",
         "\n",
-        "git_pull_info = !$git_pull_cmd\n",
+        "# git_pull_args = base_args[:] + ['git pull']\n",
+        "# git_pull_cmd = (\" \").join(git_pull_args)\n",
         "\n",
-        "print(git_pull_info)\n",
+        "# git_pull_info = !$git_pull_cmd\n",
         "\n",
-        "if 'Already up to date.' not in git_pull_info:\n",
-        "    print('\u51c6\u5907\u66f4\u65b0...')\n",
-        "    final_args.append([\n",
-        "        'conda env update','&&',\n",
-        "        f'python scripts/configure_invokeai.py -y --skip-sd-weights --root_dir {InvokeAI_runtime_dir}'\n",
-        "    ])\n",
-        "else:\n",
-        "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\uff0c\u76f4\u63a5\u542f\u52a8')\n",
+        "# print(git_pull_info)\n",
+        "\n",
+        "# if 'Already up to date.' not in git_pull_info:\n",
+        "#     print('\u51c6\u5907\u66f4\u65b0...')\n",
+        "#     final_args.append([\n",
+        "#         'conda env update','&&',\n",
+        "#         f'python scripts/configure_invokeai.py -y --skip-sd-weights --root_dir {InvokeAI_runtime_dir}'\n",
+        "#     ])\n",
+        "# else:\n",
+        "#     print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\uff0c\u76f4\u63a5\u542f\u52a8')\n",
         "    \n",
         "'''\n",
         "\u5728 Python \u4e2d\uff0c\u53ef\u4ee5\u4f7f\u7528\u4ee5\u4e0b\u51e0\u79cd\u65b9\u6cd5\u6765\u62fc\u63a5\u4e24\u4e2a\u5217\u8868\uff1a\n",
@@ -265,7 +259,6 @@
         "\u4f7f\u7528\u5185\u7f6e\u51fd\u6570 sum()\uff1anew_list = sum([list1, list2], [])\u3002\u8fd9\u4f1a\u5c06\u4e24\u4e2a\u5217\u8868\u62fc\u63a5\u8d77\u6765\uff0c\u5e76\u5c06\u7ed3\u679c\u4fdd\u5b58\u5230\u65b0\u7684\u5217\u8868\u4e2d\u3002\n",
         "'''\n",
         "\n",
-        "final_args = base_args[:]\n",
         "final_args += [\n",
         "    f'python scripts/invoke.py --root_dir {InvokeAI_runtime_dir}',\n",
         "]\n",
@@ -274,6 +267,14 @@
         "print(final_cmd)\n",
         "!$final_cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e1fe62f3-ca6f-49d4-a560-b0870ec95919",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
