--- a/ipynb/invokeai/0-OneClick-install-invokeai_from_zero.ipynb
+++ b/ipynb/invokeai/0-OneClick-install-invokeai_from_zero.ipynb
@@ -2,6 +2,45 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "009e618d-cc7f-4c45-9632-6a38d10e2798",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-repeat\"></i> \u5207\u6362pip\u8f6f\u4ef6\u6e90"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2e7b56e7-a507-49bb-a2aa-a5f03e61ba4a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import subprocess\n",
+        "\n",
+        "def check_pip_list():\n",
+        "    output = !pip config list\n",
+        "    if \"global.index-url='https://pypi.tuna.tsinghua.edu.cn/simple'\" in output and \"global.trusted-host='pypi.tuna.tsinghua.edu.cn'\" in output:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "if not check_pip_list():\n",
+        "    # \u67e5\u627epip.conf\u6587\u4ef6\n",
+        "    pip_conf_file = os.popen(\"find / -name 'pip.conf'\").read().strip()\n",
+        "    # \u76f4\u63a5\u8986\u76d6pip.conf\u6587\u4ef6\n",
+        "    with open(pip_conf_file, 'w') as f:\n",
+        "        f.write(\"[global]\\nindex-url = https://pypi.tuna.tsinghua.edu.cn/simple\\ntrusted-host = pypi.tuna.tsinghua.edu.cn\")\n",
+        "    # \u9a8c\u8bc1\u4fee\u6539\u662f\u5426\u6210\u529f\n",
+        "    if check_pip_list():\n",
+        "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u6210\u529f\uff01\")\n",
+        "    else:\n",
+        "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u811a\u672c\u662f\u5426\u6b63\u786e\u8fd0\u884c\u3002\")\n",
+        "else:\n",
+        "    print(\"pip\u8f6f\u4ef6\u6e90\u672c\u6765\u5c31\u662f\u6e05\u534e\u6e90\uff0c\u65e0\u9700\u5207\u6362\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "f814e2c7-bb6b-49b7-9ae6-a193b7a8e95f",
       "metadata": {},
       "source": [
@@ -153,6 +192,13 @@
       },
       "outputs": [],
       "source": [
+        "base_args = [\n",
+        "    proxy,'&&',\n",
+        "    'source activate','&&',\n",
+        "    'conda activate invokeai','&&',\n",
+        "    f'cd {InvokeAI_dir}','&&'\n",
+        "]\n",
+        "\n",
         "import os\n",
         "\n",
         "InvokeAI_dir=os.path.join(root_dir,'InvokeAI')\n",
@@ -183,11 +229,24 @@
         "\n",
         "def configure_invokeai():\n",
         "    # conda\u6fc0\u6d3binvokeai\u73af\u5883\uff0c\u4e14\u8fd0\u884c\u914d\u7f6e.py\u6587\u4ef6\n",
-        "    !$proxy &&\\\n",
-        "    source activate &&\\\n",
-        "    conda activate invokeai &&\\\n",
-        "    cd $InvokeAI_dir &&\\\n",
-        "    python scripts/configure_invokeai.py -y --root_dir $InvokeAI_runtime_dir\n",
+        "    # 2023/1/16\u66f4\u65b0\uff1a\u9047\u5230\u62a5\u9519 AttributeError: module 'dns.rdtypes' has no attribute 'ANY' \uff0c\u770b\u89e3\u51b3\u65b9\u6848\uff1ahttps://github.com/invoke-ai/InvokeAI/issues/2323\n",
+        "    configure_invokeai_args = base_args[:]\n",
+        "    configure_invokeai_args += [\n",
+        "        'pip install dnspython==2.2.1',\n",
+        "        '&&',\n",
+        "        f'cd {InvokeAI_dir}'\n",
+        "        '&&',\n",
+        "        f'python scripts/configure_invokeai.py --root_dir {InvokeAI_runtime_dir}'\n",
+        "    ]\n",
+        "    # \u662f\u5426\u8981\u8fdb\u884c\u9ed8\u8ba4\u5168\u90e8yes\u7684\u5b89\u88c5\uff0cThe program was started with a '--yes' flag, which indicates user's acceptance of the above License terms\n",
+        "    # configure_invokeai_args += ['-y']\n",
+        "    \n",
+        "    configure_invokeai_cmd = (\" \").join(configure_invokeai_args)\n",
+        "    print(configure_invokeai_cmd)\n",
+        "    copy_to_clipboard(configure_invokeai_cmd)\n",
+        "    print('\u76ee\u524d\u4e0d\u80fd\u5b8c\u5168\u81ea\u52a8\u5316\u4ece\u5934\u5230\u5c3e\u5b89\u88c5\uff0c\u6240\u4ee5\u8bf7\u5728\u7ec8\u7aef\u7c98\u8d34\u4ee5\u4e0a\u8fd9\u6bb5\u4ee3\u7801\uff0c\u7136\u540e\u5728\u7ec8\u7aef\u4e2d\u8fd0\u884c')\n",
+        "    # \u76ee\u524d\u4e0d\u80fd\u5b8c\u5168\u81ea\u52a8\u5316\u4ece\u5934\u5230\u5c3e\u5b89\u88c5\uff0c\u6240\u4ee5\u8bf7\u5728\u7ec8\u7aef\u7c98\u8d34\u4ee5\u4e0a\u8fd9\u6bb5\u4ee3\u7801\uff0c\u7136\u540e\u5728\u7ec8\u7aef\u4e2d\u8fd0\u884c\n",
+        "    # !$configure_invokeai_cmd\n",
         "\n",
         "if os.path.realpath(env_yml_path)==linux_env_yml_path:\n",
         "    print(f'environment.yml\u5df2\u94fe\u63a5\u5230 InvokeAI \u6839\u76ee\u5f55\u4e2d\uff0c\u5e76\u4e14\u5b83\u6307\u5411 {linux_env_yml_path}')\n",
@@ -235,13 +294,6 @@
       },
       "outputs": [],
       "source": [
-        "base_args = [\n",
-        "    proxy,'&&',\n",
-        "    'source activate','&&',\n",
-        "    'conda activate invokeai','&&',\n",
-        "    f'cd {InvokeAI_dir}','&&'\n",
-        "]\n",
-        "\n",
         "def check_patchmatch_installed():\n",
         "    install_pypatch_args = base_args[:] + [\n",
         "        'python -c \"from patchmatch import patch_match as pm;print(pm.patchmatch_available)\"'\n",
@@ -369,7 +421,7 @@
         "\n",
         "if env_name == 'AutoDL':\n",
         "    invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
-        "    invokeai_init_path='/root/invokeai/invokeai.init'\n",
+        "    invokeai_init_path=os.path.join(InvokeAI_runtime_dir,'./invokeai.init')\n",
         "elif env_name == 'OpenBayes':\n",
         "    invoke_outputs_dir=os.path.realpath(os.path.join(root_dir,'./invoke_outputs'))\n",
         "    invokeai_init_path=os.path.realpath(os.path.join(root_dir,'./invokeai/invokeai.init'))\n",
@@ -388,8 +440,11 @@
         "# \u8fdb\u884c\u6587\u672c\u66ff\u6362\n",
         "for i, line in enumerate(lines):\n",
         "    lines[i] = re.sub(r'--outdir=\"(.*)\"', f'--outdir=\"{invoke_outputs_dir}\"', line)\n",
+        "    lines[i] = re.sub(r'--nsfw_checker', f'--no-nsfw_checker', line)\n",
         "\n",
         "#\u8ffd\u52a0\u989d\u5916\u7684\u53c2\u6570\n",
+        "add_line(lines,'--no-nsfw_checker')\n",
+        "add_line(lines,'--no-safety_checker')\n",
         "add_line(lines,f'--port={port}') #\u8bbe\u5b9a\u7aef\u53e3\n",
         "add_line(lines,'--web') #\u4ee5webui\u7684\u5f62\u5f0f\u542f\u52a8\n",
         "\n",
@@ -427,19 +482,24 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "final_args = []\n",
+        "final_args += base_args\n",
+        "\n",
         "git_pull_args = base_args[:] + ['git pull']\n",
         "git_pull_cmd = (\" \").join(git_pull_args)\n",
         "\n",
         "git_pull_info = !$git_pull_cmd\n",
         "\n",
+        "print(git_pull_info)\n",
+        "\n",
         "if 'Already up to date.' not in git_pull_info:\n",
         "    print('\u51c6\u5907\u66f4\u65b0...')\n",
         "    final_args.append([\n",
         "        'conda env update','&&',\n",
-        "        'python scripts/configure_invokeai.py -y --skip-sd-weights'\n",
+        "        f'python scripts/configure_invokeai.py -y --skip-sd-weights --root_dir {InvokeAI_runtime_dir}'\n",
         "    ])\n",
         "else:\n",
-        "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\u7684\uff0c\u76f4\u63a5\u542f\u52a8')\n",
+        "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\uff0c\u76f4\u63a5\u542f\u52a8')\n",
         "    \n",
         "'''\n",
         "\u5728 Python \u4e2d\uff0c\u53ef\u4ee5\u4f7f\u7528\u4ee5\u4e0b\u51e0\u79cd\u65b9\u6cd5\u6765\u62fc\u63a5\u4e24\u4e2a\u5217\u8868\uff1a\n",
@@ -450,10 +510,11 @@
         "\n",
         "final_args = base_args[:]\n",
         "final_args += [\n",
-        "    'python scripts/invoke.py',\n",
+        "    f'python scripts/invoke.py --root_dir {InvokeAI_runtime_dir}',\n",
         "]\n",
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
+        "print(final_cmd)\n",
         "!$final_cmd"
       ]
     },
