speed up prediction, set max_loaded_models to 1

--- a/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
@@ -260,21 +260,15 @@
         "'''\n",
         "\n",
         "final_args += [\n",
-        "    f'python scripts/invoke.py --root_dir {InvokeAI_runtime_dir}',\n",
+        "    'python scripts/invoke.py',\n",
+        "    f'--root_dir {InvokeAI_runtime_dir}',\n",
+        "    '--max_loaded_models 1'\n",
         "]\n",
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
         "print(final_cmd)\n",
         "!$final_cmd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e1fe62f3-ca6f-49d4-a560-b0870ec95919",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
