use autodl-tmp first

--- a/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/3-OneClick-launch-invokeai.ipynb
@@ -100,11 +100,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e3b8164a-fc51-4e9e-a5c6-968bfd77d813",
-      "metadata": {
-        "jupyter": {
-          "source_hidden": true
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
@@ -136,10 +132,18 @@
         "    \n",
         "print(InvokeAI_dir)\n",
         "    \n",
-        "InvokeAI_runtime_dir = None\n",
         "# InvokeAI_runtime_dir = find_folder(root_dir,'c7dd5c092639d9ac32ea5d1bbcaa9ec4ed9ade22d2c0c5621d395af5c1cda267')\n",
+        "InvokeAI_runtime_dir = None\n",
+        "runtime_list = find_dir(root_dir, 'InvokeAI_runtime')\n",
+        "\n",
+        "# \u5982\u679cdir\u4e2d\u5305\u542b\u201cautodl-tmp\u201d\uff0c\u5219\u4f18\u5148\u91c7\u7528\n",
+        "for dir in runtime_list:\n",
+        "    if 'autodl-tmp' in dir:\n",
+        "        InvokeAI_runtime_dir = dir\n",
+        "        break\n",
+        "\n",
         "if not InvokeAI_runtime_dir:\n",
-        "    InvokeAI_runtime_dir=find_dir(root_dir, 'InvokeAI_runtime')[0]\n",
+        "    InvokeAI_runtime_dir = runtime_list[0]\n",
         "\n",
         "print(InvokeAI_runtime_dir)"
       ]
@@ -157,7 +161,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "c7d882c0-ad8c-4130-87b3-e1af72b5f997",
-      "metadata": {},
+      "metadata": {
+        "jupyter": {
+          "source_hidden": true
+        }
+      },
       "outputs": [],
       "source": [
         "port = 6006\n",
