--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -11,6 +11,45 @@
     },
     {
       "cell_type": "markdown",
+      "id": "293b985b-51ef-4a53-80ae-dbccacab9bba",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-repeat\"></i> \u5207\u6362pip\u8f6f\u4ef6\u6e90"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bf8e99a2-bd79-4e4d-933c-7328b03fd976",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import subprocess\n",
+        "\n",
+        "def check_pip_list():\n",
+        "    output = !pip config list\n",
+        "    if \"global.index-url='https://pypi.tuna.tsinghua.edu.cn/simple'\" in output and \"global.trusted-host='pypi.tuna.tsinghua.edu.cn'\" in output:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "if not check_pip_list():\n",
+        "    # \u67e5\u627epip.conf\u6587\u4ef6\n",
+        "    pip_conf_file = os.popen(\"find / -name 'pip.conf'\").read().strip()\n",
+        "    # \u76f4\u63a5\u8986\u76d6pip.conf\u6587\u4ef6\n",
+        "    with open(pip_conf_file, 'w') as f:\n",
+        "        f.write(\"[global]\\nindex-url = https://pypi.tuna.tsinghua.edu.cn/simple\\ntrusted-host = pypi.tuna.tsinghua.edu.cn\")\n",
+        "    # \u9a8c\u8bc1\u4fee\u6539\u662f\u5426\u6210\u529f\n",
+        "    if check_pip_list():\n",
+        "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u6210\u529f\uff01\")\n",
+        "    else:\n",
+        "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u811a\u672c\u662f\u5426\u6b63\u786e\u8fd0\u884c\u3002\")\n",
+        "else:\n",
+        "    print(\"pip\u8f6f\u4ef6\u6e90\u672c\u6765\u5c31\u662f\u6e05\u534e\u6e90\uff0c\u65e0\u9700\u5207\u6362\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "65a366f3-49d3-4213-b1a9-dc63d189dc8f",
       "metadata": {},
       "source": [
@@ -63,6 +102,61 @@
         "env_cb = detect_environment()\n",
         "env_name = env_cb['env_name']\n",
         "content_path = env_cb['content_path']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "28b56e9b-65f6-4260-af96-a4f671bbd34b",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-arrow-down\"></i> \u5b89\u88c5\u5fc5\u8981\u4f9d\u8d56"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a12f85f3-9e06-4d46-b30b-689dffe8d41f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import subprocess\n",
+        "\n",
+        "libraries_to_install = [\n",
+        "    \n",
+        "]\n",
+        "\n",
+        "tools_to_install = [\n",
+        "    \"iputils-ping\",\n",
+        "]\n",
+        "\n",
+        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
+        "for library in libraries_to_install:\n",
+        "    if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        continue\n",
+        "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
+        "        !pip install $library\n",
+        "    else:\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        \n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "update_needed = False\n",
+        "for tool in tools_to_install:\n",
+        "    exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "    if exit_code != 0:\n",
+        "        update_needed = True\n",
+        "        break\n",
+        "    else:\n",
+        "        print(f\"\u3010 {tool} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "if update_needed:\n",
+        "    !apt-get update\n",
+        "    for tool in tools_to_install:\n",
+        "        exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "        if exit_code != 0:\n",
+        "            !apt-get install -y $tool\n",
+        "    \n"
       ]
     },
     {
@@ -201,15 +295,28 @@
       },
       "outputs": [],
       "source": [
-        "import os,sys\n",
-        "sys.path.append('../') # \u628a\u4e0a\u7ea7\u8def\u5f84\u4e5f\u52a0\u5165\u5230\u7cfb\u7edf\u8def\u5f84\u4e2d\uff0c\u8fd9\u6837\u5c31\u80fd\u591f\u627e\u5230func\n",
-        "\n",
         "from IPython.display import display,clear_output\n",
         "clear_output()\n",
         "import ipywidgets as widgets\n",
         "from func.env import setProxy,getWebUIDir\n",
         "\n",
+        "try:\n",
+        "    proxy,region\n",
+        "except NameError:\n",
+        "    cb=setProxy()\n",
+        "    proxy=cb['proxy']\n",
+        "    region=cb['region']\n",
+        "    clear_output(wait=True)\n",
+        "\n",
         "webUIDir=getWebUIDir()\n",
+        "print(webUIDir)\n",
+        "\n",
+        "base_args = [\n",
+        "    'source activate','&&',\n",
+        "    'conda activate py3.10.6','&&',\n",
+        "    proxy,'&&'\n",
+        "       ]\n",
+        "\n",
         "debugging=False\n",
         "\n",
         "alertBtn = widgets.Button(\n",
@@ -221,14 +328,7 @@
         "    icon='' # (FontAwesome names without the `fa-` prefix)\n",
         ")\n",
         "\n",
-        "try:\n",
-        "    proxy,region\n",
-        "except NameError:\n",
-        "    cb=setProxy()\n",
-        "    proxy=cb['proxy']\n",
-        "    region=cb['region']\n",
-        "    clear_output(wait=True)\n",
-        "    \n",
+        "\n",
         "display(alertBtn)\n",
         "    \n",
         "if os.path.exists(webUIDir):\n",
@@ -237,14 +337,16 @@
         "    alertBtn.button_style='warning'\n",
         "    alertBtn.icon='upload'\n",
         "    \n",
-        "    !source activate &&\\\n",
-        "    conda activate py3.10.6 &&\\\n",
-        "    $proxy &&\\\n",
-        "    cd $webUIDir &&\\\n",
-        "    git pull &&\\\n",
-        "    python -V &&\\\n",
-        "    python -m pip install -r requirements.txt\n",
-        "    \n",
+        "    update_sd_webui_args = base_args[:]\n",
+        "    update_sd_webui_args += [\n",
+        "        f'cd {webUIDir}','&&',\n",
+        "        'git pull','&&',\n",
+        "        'python -V','&&',\n",
+        "        'python -m pip install -r requirements.txt'\n",
+        "    ]\n",
+        "    update_sd_webui_cmd = (\" \").join(update_sd_webui_args)\n",
+        "    !$update_sd_webui_cmd\n",
+        "\n",
         "    if debugging==False:\n",
         "        clear_output()\n",
         "        display(alertBtn)\n",
@@ -252,6 +354,20 @@
         "    alertBtn.description='\u66f4\u65b0\u5b8c\u6210!'\n",
         "    alertBtn.button_style='success'\n",
         "    alertBtn.icon='check'\n",
+        "\n",
+        "else:\n",
+        "    alertBtn.description='\u6b63\u5728\u5b89\u88c5SDWebUI...'\n",
+        "    alertBtn.button_style='info'\n",
+        "    alertBtn.icon='download'\n",
+        "    sd_webui_download_args = base_args[:]\n",
+        "    sd_webui_download_args += [\n",
+        "        f'cd {root_dir}','&&',\n",
+        "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui','&&',\n",
+        "        'python -V','&&',\n",
+        "        'python -m pip install -r requirements.txt'\n",
+        "    ]\n",
+        "    sd_webui_download_cmd = (\" \").join(sd_webui_download_args)\n",
+        "    !$sd_webui_download_cmd\n",
         "    \n",
         "#     r = !source activate &&\\\n",
         "#     conda activate py3.10.6 &&\\\n",
@@ -273,9 +389,7 @@
         "#         alertBtn.icon='exclamation'\n",
         "\n",
         "\n",
-        "# clear_output(wait=True)\n",
-        "\n",
-        "\n"
+        "# clear_output(wait=True)"
       ]
     },
     {
@@ -300,19 +414,16 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a10b8b05-8839-4ccb-94c1-b514412dde5a",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "outputs": [],
       "source": [
-        "base_args = [\n",
-        "        'source activate','&&',\n",
-        "        'conda activate py3.10.6','&&',\n",
-        "        f'cd {webUIDir}','&&',\n",
-        "       ]\n",
-        "\n",
         "xformers_install_args = base_args[:]\n",
         "\n",
         "xformers_install_args += [\n",
-        "    'conda install xformers -c xformers/label/dev'\n",
+        "    f'cd {webUIDir}','&&',\n",
+        "    'conda install xformers -c xformers/label/dev -y'\n",
         "]\n",
         "\n",
         "xformers_install_cmd = (\" \").join(xformers_install_args)\n",
@@ -395,6 +506,93 @@
     },
     {
       "cell_type": "markdown",
+      "id": "38b87ebd-8eaa-4a22-98a9-767c5b668224",
+      "metadata": {},
+      "source": [
+        "## \u6302\u8f7d.ckpt\u5230SD WebUI\u6a21\u578b\u6587\u4ef6\u5939"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a79e41d2-e823-4ead-8fbb-e7334ab54861",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from func.checksum import generate_checksum,find_folder\n",
+        "\n",
+        "# def find_file(root_dir, target_name):\n",
+        "#     paths = []\n",
+        "#     paths = !find $root_dir -name $target_name\n",
+        "#     print(paths)\n",
+        "    \n",
+        "#     paths.sort(key=len)\n",
+        "#     if paths:\n",
+        "#         return paths\n",
+        "#     else:\n",
+        "#         return None\n",
+        "def create_symlink(source_path, symlink_path, symlink_name):\n",
+        "    # \u5c06\u8f6f\u94fe\u63a5\u8def\u5f84\u62fc\u63a5\u6210\u5b8c\u6574\u7684\u6587\u4ef6\u8def\u5f84\n",
+        "    symlink_file = f\"{symlink_path}/{symlink_name}\"\n",
+        "\n",
+        "    # \u5982\u679c\u8f6f\u94fe\u63a5\u6587\u4ef6\u5b58\u5728\uff0c\u5219\u5148\u5220\u9664\u5b83\n",
+        "    if os.path.exists(symlink_file):\n",
+        "        os.remove(symlink_file)\n",
+        "\n",
+        "    # \u521b\u5efa\u8f6f\u94fe\u63a5\n",
+        "    os.symlink(source_path, symlink_file)\n",
+        "\n",
+        "    # \u9a8c\u8bc1\u8f6f\u94fe\u63a5\u662f\u5426\u6210\u529f\u521b\u5efa\n",
+        "    if os.path.islink(symlink_file):\n",
+        "        print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
+        "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m \u279c \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
+        "    else:\n",
+        "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
+        "\n",
+        "def find_file(root_dir, target_name):\n",
+        "    paths = []\n",
+        "    for dirpath, dirnames, filenames in os.walk(root_dir):\n",
+        "        for filename in filenames:\n",
+        "            if filename == target_name:\n",
+        "                path = os.path.join(dirpath, filename)\n",
+        "                paths.append(path)\n",
+        "    paths.sort(key=len)\n",
+        "    if paths:\n",
+        "        return paths\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "def check_model_and_make_symbollink():\n",
+        "    \n",
+        "    stable_diffusion_v2_dir = find_file('/', 'v2-1_768-nonema-pruned.ckpt')[0]\n",
+        "\n",
+        "    if stable_diffusion_v2_dir:\n",
+        "        print(stable_diffusion_v2_dir)\n",
+        "        webUIDir = getWebUIDir()\n",
+        "        sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
+        "        model_path = os.path.realpath(os.path.join(sd_models_dir,'v2-1_768-nonema-pruned.ckpt'))\n",
+        "\n",
+        "        if stable_diffusion_v2_dir==model_path:\n",
+        "            print('stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "        else:\n",
+        "            # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
+        "            create_symlink(\n",
+        "                source_path=stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                symlink_path='/output/stable-diffusion-webui/models/Stable-diffusion', # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                symlink_name='v2-1_768-nonema-pruned.ckpt' # \u6a21\u578b\u540d\u79f0\n",
+        "            )\n",
+        "    # else:\n",
+        "    #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
+        "    #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
+        "    #     %run $convertodiffv2_path\n",
+        "    #     check_model_and_make_symbollink()\n",
+        "\n",
+        "check_model_and_make_symbollink()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "6ba69146-2487-4537-8dd8-a14970088878",
       "metadata": {},
       "source": [
@@ -452,7 +650,8 @@
         "        '--port 7860',\n",
         "        '--deepdanbooru',\n",
         "        '--administrator',\n",
-        "        '--disable-safe-unpickle'\n",
+        "        '--disable-safe-unpickle',\n",
+        "        '--no-half'\n",
         "       ]\n",
         "\n",
         "try:\n",
@@ -466,11 +665,11 @@
         "        print(f\"\u5df2\u7ecf\u6302\u8f7d\u3010{region}\u3011proxy\")\n",
         "        args.insert(0,f\"{proxy} && env|grep -i proxy &&\")\n",
         "\n",
-        "if(canUseXformers==True):\n",
-        "    print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
-        "    args.append(\"--xformers\")\n",
-        "else:\n",
-        "    print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
+        "# if(canUseXformers==True):\n",
+        "#     print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
+        "#     args.append(\"--xformers\")\n",
+        "# else:\n",
+        "#     print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
         "    \n",
         "cmd = (\" \").join(args)\n",
         "\n",
