--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -240,22 +240,20 @@
         "from IPython.display import clear_output\n",
         "import ipywidgets as widgets\n",
         "\n",
+        "custom_env_name = 'py3.10.6'\n",
+        "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
-        "if 'py3.10.6' not in s:\n",
-        "    print('\u5f53\u524d\u7cfb\u7edf\u4e2d\u6ca1\u6709py3.10.6\u73af\u5883\uff0c\u6b63\u5728\u5b89\u88c5')\n",
+        "if custom_env_name not in s:\n",
+        "    print(f'\u5f53\u524d\u7cfb\u7edf\u4e2d\u6ca1\u6709{custom_env_name}\u73af\u5883\uff0c\u6b63\u5728\u5b89\u88c5')\n",
         "    # \u521b\u5efaConda\u65b0\u7684\u865a\u62df\u73af\u5883\n",
-        "    # \u6784\u5efa\u4e00\u4e2a\u865a\u62df\u73af\u5883\uff0c\u540d\u4e3a: py3.10.6\n",
+        "    # \u6784\u5efa\u4e00\u4e2a\u865a\u62df\u73af\u5883\n",
         "    # \u66f4\u65b0bashrc\u4e2d\u7684\u73af\u5883\u53d8\u91cf\n",
         "    !source /usr/local/etc/profile.d/conda.sh &&\\\n",
-        "    conda create -n py3.10.6 python=3.10.6 -y &&\\\n",
+        "    conda create -n $custom_env_name python=3.10.6 -y &&\\\n",
         "    conda init bash && source /root/.bashrc -y\n",
         "else:\n",
-        "    print('\u5df2\u7ecf\u5b89\u88c5\u4e86py3.10.6\u73af\u5883')\n",
-        "    # !source activate &&\\\n",
-        "    # conda activate py3.10.6 &&\\\n",
-        "    # conda install ipykernel &&\\\n",
-        "    # ipython kernel install --user --name=py3.10.6 --display-name \"Python3.10.6\" # \u8bbe\u7f6ekernel\uff0c--user\u8868\u793a\u5f53\u524d\u7528\u6237\uff0c--name\u4e3a\u865a\u62df\u73af\u5883\u540d\u79f0\uff0c--display-name\u4e3a\u7b14\u8bb0\u672c\u663e\u793a\u540d\u79f0\n",
+        "    print(f'\u5df2\u7ecf\u5b89\u88c5\u4e86{custom_env_name}\u73af\u5883')\n",
         "\n",
         "# clear_output(wait=True)\n",
         "# print(\"Done!\")\n",
@@ -363,6 +361,7 @@
         "    sd_webui_download_args += [\n",
         "        f'cd {root_dir}','&&',\n",
         "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui','&&',\n",
+        "        'cd stable-diffusion-webui','&&',\n",
         "        'python -V','&&',\n",
         "        'python -m pip install -r requirements.txt'\n",
         "    ]\n",
@@ -616,10 +615,6 @@
         "archCondition = False\n",
         "canUseXformers = False\n",
         "\n",
-        "# cb = !source activate &&\\\n",
-        "# conda activate py3.10.6 &&\\\n",
-        "# python getArch.py\n",
-        "\n",
         "cb = getArch()\n",
         "arch = cb['arch']\n",
         "gpu = cb['gpu']\n",
@@ -640,18 +635,18 @@
         "\n",
         "webUIDir = getWebUIDir()\n",
         "\n",
-        "args = [\n",
-        "        'source activate','&&',\n",
-        "        'conda activate py3.10.6','&&',\n",
-        "        f'cd {webUIDir}','&&',\n",
-        "        'python launch.py',\n",
-        "        '--share',\n",
-        "        '--opt-split-attention',\n",
-        "        '--port 7860',\n",
-        "        '--deepdanbooru',\n",
-        "        '--administrator',\n",
-        "        '--disable-safe-unpickle',\n",
-        "        '--no-half'\n",
+        "args = base_args[:]\n",
+        "\n",
+        "args += [\n",
+        "    f'cd {webUIDir}','&&',\n",
+        "    'python launch.py',\n",
+        "    '--share',\n",
+        "    '--opt-split-attention',\n",
+        "    '--port 7860',\n",
+        "    '--deepdanbooru',\n",
+        "    '--administrator',\n",
+        "    '--disable-safe-unpickle',\n",
+        "    '--no-half'\n",
         "       ]\n",
         "\n",
         "try:\n",
@@ -693,7 +688,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.15"
+      "version": "3.8.13"
     },
     "toc-autonumbering": false,
     "toc-showmarkdowntxt": false,
