custom python version

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -210,8 +210,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import sys\n",
-        "sys.path.append('../') # \u56e0\u4e3afunc\u4e0eipynb\u4f4d\u4e8e\u540c\u4e00\u4e2a\u76ee\u5f55\u4e0b\uff0c\u6240\u4ee5\u8981\u5f80\u4e0a\u4e00\u5c42\u8def\u5f84\u7d22\u5f15\n",
         "from func.env import setProxy\n",
         "cb=setProxy()\n",
         "proxy=cb['proxy']\n",
@@ -240,7 +238,11 @@
         "from IPython.display import clear_output\n",
         "import ipywidgets as widgets\n",
         "\n",
-        "custom_env_name = 'py3.10.6'\n",
+        "python_version = '3.10.6'\n",
+        "\n",
+        "# custom_env_name = 'py' + python_version\n",
+        "\n",
+        "custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
@@ -249,9 +251,20 @@
         "    # \u521b\u5efaConda\u65b0\u7684\u865a\u62df\u73af\u5883\n",
         "    # \u6784\u5efa\u4e00\u4e2a\u865a\u62df\u73af\u5883\n",
         "    # \u66f4\u65b0bashrc\u4e2d\u7684\u73af\u5883\u53d8\u91cf\n",
-        "    !source /usr/local/etc/profile.d/conda.sh &&\\\n",
-        "    conda create -n $custom_env_name python=3.10.6 -y &&\\\n",
-        "    conda init bash && source /root/.bashrc -y\n",
+        "    python_install_args = [\n",
+        "        'source /usr/local/etc/profile.d/conda.sh','&&',\n",
+        "        f'conda create -n {custom_env_name} python={python_version} -y','&&',\n",
+        "        'conda init bash','&&',\n",
+        "        'source /root/.bashrc -y'\n",
+        "    ]\n",
+        "    \n",
+        "    # !source /usr/local/etc/profile.d/conda.sh &&\\\n",
+        "    # conda create -n $custom_env_name python=$python_version -y &&\\\n",
+        "    # conda init bash && source /root/.bashrc -y\n",
+        "    \n",
+        "    python_install_cmd = (\" \").join(python_install_args)\n",
+        "    !$python_install_cmd\n",
+        "    \n",
         "else:\n",
         "    print(f'\u5df2\u7ecf\u5b89\u88c5\u4e86{custom_env_name}\u73af\u5883')\n",
         "\n",
@@ -311,8 +324,8 @@
         "\n",
         "base_args = [\n",
         "    'source activate','&&',\n",
-        "    'conda activate py3.10.6','&&',\n",
-        "    proxy,'&&'\n",
+        "    f'conda activate {custom_env_name}','&&',\n",
+        "    # proxy,'&&'\n",
         "       ]\n",
         "\n",
         "debugging=False\n",
@@ -354,13 +367,14 @@
         "    alertBtn.icon='check'\n",
         "\n",
         "else:\n",
-        "    alertBtn.description='\u6b63\u5728\u5b89\u88c5SDWebUI...'\n",
+        "    alertBtn.description='\u5b89\u88c5SDWebUI...'\n",
         "    alertBtn.button_style='info'\n",
         "    alertBtn.icon='download'\n",
         "    sd_webui_download_args = base_args[:]\n",
         "    sd_webui_download_args += [\n",
         "        f'cd {root_dir}','&&',\n",
-        "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui','&&',\n",
+        "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui',\n",
+        "        '&&',\n",
         "        'cd stable-diffusion-webui','&&',\n",
         "        'python -V','&&',\n",
         "        'python -m pip install -r requirements.txt'\n",
@@ -418,16 +432,16 @@
       },
       "outputs": [],
       "source": [
-        "xformers_install_args = base_args[:]\n",
+        "# xformers_install_args = base_args[:]\n",
         "\n",
-        "xformers_install_args += [\n",
-        "    f'cd {webUIDir}','&&',\n",
-        "    'conda install xformers -c xformers/label/dev -y'\n",
-        "]\n",
+        "# xformers_install_args += [\n",
+        "#     'conda install pytorch torchvision torchaudio pytorch-cuda=11.7 -c pytorch -c nvidia -y','&&',\n",
+        "#     'conda install xformers -c xformers/label/dev -y'\n",
+        "# ]\n",
         "\n",
-        "xformers_install_cmd = (\" \").join(xformers_install_args)\n",
+        "# xformers_install_cmd = (\" \").join(xformers_install_args)\n",
         "\n",
-        "!$xformers_install_cmd"
+        "# !$xformers_install_cmd"
       ]
     },
     {
@@ -564,22 +578,18 @@
         "\n",
         "def check_model_and_make_symbollink():\n",
         "    \n",
-        "    stable_diffusion_v2_dir = find_file('/', 'v2-1_768-nonema-pruned.ckpt')[0]\n",
+        "    stable_diffusion_v2_dir = find_file('/', model_name)[0]\n",
         "\n",
         "    if stable_diffusion_v2_dir:\n",
-        "        print(stable_diffusion_v2_dir)\n",
-        "        webUIDir = getWebUIDir()\n",
-        "        sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
-        "        model_path = os.path.realpath(os.path.join(sd_models_dir,'v2-1_768-nonema-pruned.ckpt'))\n",
         "\n",
         "        if stable_diffusion_v2_dir==model_path:\n",
         "            print('stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
         "        else:\n",
         "            # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
         "            create_symlink(\n",
-        "                source_path=stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
-        "                symlink_path='/output/stable-diffusion-webui/models/Stable-diffusion', # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
-        "                symlink_name='v2-1_768-nonema-pruned.ckpt' # \u6a21\u578b\u540d\u79f0\n",
+        "                source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                symlink_path = sd_models_dir, # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                symlink_name = 'v2-1_768-nonema-pruned.ckpt' # \u6a21\u578b\u540d\u79f0\n",
         "            )\n",
         "    # else:\n",
         "    #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
@@ -587,7 +597,34 @@
         "    #     %run $convertodiffv2_path\n",
         "    #     check_model_and_make_symbollink()\n",
         "\n",
+        "\n",
+        "webUIDir = getWebUIDir()\n",
+        "print(webUIDir)\n",
+        "model_name = 'v2-1_768-nonema-pruned.ckpt'\n",
+        "sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
+        "model_path = os.path.realpath(os.path.join(sd_models_dir,model_name))\n",
+        "    \n",
         "check_model_and_make_symbollink()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a960aaae-2871-4a6e-851d-d1f113d998ad",
+      "metadata": {},
+      "source": [
+        "## \u4e0b\u8f7dv2\u6a21\u578b\u5bf9\u5e94\u7684YAML\u914d\u7f6e\u6587\u4ef6"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "201afd66-6a8b-4be9-ba54-f92eb51feab6",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(sd_models_dir)\n",
+        "!cd $sd_models_dir &&\\\n",
+        "wget -O v2-1_768-nonema-pruned.yaml https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml"
       ]
     },
     {
@@ -639,6 +676,8 @@
         "\n",
         "args += [\n",
         "    f'cd {webUIDir}','&&',\n",
+        "    'pip install \"opencv-python-headless<4.3\" ','&&',\n",
+        "    'pip install triton==2.0.0.dev20221120','&&',\n",
         "    'python launch.py',\n",
         "    '--share',\n",
         "    '--opt-split-attention',\n",
@@ -646,30 +685,38 @@
         "    '--deepdanbooru',\n",
         "    '--administrator',\n",
         "    '--disable-safe-unpickle',\n",
-        "    '--no-half'\n",
+        "    # '--no-half'\n",
         "       ]\n",
         "\n",
-        "try:\n",
-        "    proxy\n",
-        "except NameError:\n",
-        "    print(\"\u4e0d\u5b58\u5728proxy\")\n",
-        "else:\n",
-        "    if region=='\u672a\u77e5':\n",
-        "        print(\"\u4e0d\u5b58\u5728proxy\")\n",
-        "    else:\n",
-        "        print(f\"\u5df2\u7ecf\u6302\u8f7d\u3010{region}\u3011proxy\")\n",
-        "        args.insert(0,f\"{proxy} && env|grep -i proxy &&\")\n",
-        "\n",
-        "# if(canUseXformers==True):\n",
-        "#     print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
-        "#     args.append(\"--xformers\")\n",
+        "# try:\n",
+        "#     proxy\n",
+        "# except NameError:\n",
+        "#     print(\"\u4e0d\u5b58\u5728proxy\")\n",
         "# else:\n",
-        "#     print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
+        "#     if region=='\u672a\u77e5':\n",
+        "#         print(\"\u4e0d\u5b58\u5728proxy\")\n",
+        "#     else:\n",
+        "#         print(f\"\u5df2\u7ecf\u6302\u8f7d\u3010{region}\u3011proxy\")\n",
+        "#         args.insert(0,f\"{proxy} && env|grep -i proxy &&\")\n",
+        "\n",
+        "if(canUseXformers==True):\n",
+        "    print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
+        "    args.append(\"--xformers\")\n",
+        "else:\n",
+        "    print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
         "    \n",
         "cmd = (\" \").join(args)\n",
         "\n",
         "!$cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4325f2f9-6420-47d1-a31f-46f4eed166e7",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -688,7 +735,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     },
     "toc-autonumbering": false,
     "toc-showmarkdowntxt": false,
