--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -24,28 +24,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "import subprocess\n",
+        "# import os\n",
+        "# import subprocess\n",
         "\n",
-        "def check_pip_list():\n",
-        "    output = !pip config list\n",
-        "    if \"global.index-url='https://pypi.tuna.tsinghua.edu.cn/simple'\" in output and \"global.trusted-host='pypi.tuna.tsinghua.edu.cn'\" in output:\n",
-        "        return True\n",
-        "    else:\n",
-        "        return False\n",
-        "if not check_pip_list():\n",
-        "    # \u67e5\u627epip.conf\u6587\u4ef6\n",
-        "    pip_conf_file = os.popen(\"find / -name 'pip.conf'\").read().strip()\n",
-        "    # \u76f4\u63a5\u8986\u76d6pip.conf\u6587\u4ef6\n",
-        "    with open(pip_conf_file, 'w') as f:\n",
-        "        f.write(\"[global]\\nindex-url = https://pypi.tuna.tsinghua.edu.cn/simple\\ntrusted-host = pypi.tuna.tsinghua.edu.cn\")\n",
-        "    # \u9a8c\u8bc1\u4fee\u6539\u662f\u5426\u6210\u529f\n",
-        "    if check_pip_list():\n",
-        "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u6210\u529f\uff01\")\n",
-        "    else:\n",
-        "        print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u811a\u672c\u662f\u5426\u6b63\u786e\u8fd0\u884c\u3002\")\n",
-        "else:\n",
-        "    print(\"pip\u8f6f\u4ef6\u6e90\u672c\u6765\u5c31\u662f\u6e05\u534e\u6e90\uff0c\u65e0\u9700\u5207\u6362\")"
+        "# def check_pip_list():\n",
+        "#     output = !pip config list\n",
+        "#     print(output)\n",
+        "#     if \"global.index-url='https://pypi.tuna.tsinghua.edu.cn/simple'\" in output and \"global.trusted-host='pypi.tuna.tsinghua.edu.cn'\" in output:\n",
+        "#         return True\n",
+        "#     else:\n",
+        "#         return False\n",
+        "# if not check_pip_list():\n",
+        "#     # \u67e5\u627epip.conf\u6587\u4ef6\n",
+        "#     pip_conf_file = os.popen(\"find / -name 'pip.conf'\").read().strip()\n",
+        "#     # \u76f4\u63a5\u8986\u76d6pip.conf\u6587\u4ef6\n",
+        "#     with open(pip_conf_file, 'w') as f:\n",
+        "#         f.write(\"[global]\\nindex-url = https://pypi.tuna.tsinghua.edu.cn/simple\\ntrusted-host = pypi.tuna.tsinghua.edu.cn\")\n",
+        "#     # \u9a8c\u8bc1\u4fee\u6539\u662f\u5426\u6210\u529f\n",
+        "#     if check_pip_list():\n",
+        "#         print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u6210\u529f\uff01\")\n",
+        "#     else:\n",
+        "#         print(\"pip\u8f6f\u4ef6\u6e90\u5207\u6362\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u811a\u672c\u662f\u5426\u6b63\u786e\u8fd0\u884c\u3002\")\n",
+        "# else:\n",
+        "#     print(\"pip\u8f6f\u4ef6\u6e90\u672c\u6765\u5c31\u662f\u6e05\u534e\u6e90\uff0c\u65e0\u9700\u5207\u6362\")"
       ]
     },
     {
@@ -240,9 +241,9 @@
         "\n",
         "python_version = '3.10.6'\n",
         "\n",
-        "# custom_env_name = 'py' + python_version\n",
+        "custom_env_name = 'py' + python_version\n",
         "\n",
-        "custom_env_name = 'base'\n",
+        "# custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
@@ -352,6 +353,7 @@
         "    update_sd_webui_args += [\n",
         "        f'cd {webUIDir}','&&',\n",
         "        'git pull','&&',\n",
+        "        # 'git checkout d8f8bcb','&&'\n",
         "        'python -V','&&',\n",
         "        'python -m pip install -r requirements.txt'\n",
         "    ]\n",
@@ -376,6 +378,7 @@
         "        'git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui',\n",
         "        '&&',\n",
         "        'cd stable-diffusion-webui','&&',\n",
+        "        # 'git checkout d8f8bcb','&&'\n",
         "        'python -V','&&',\n",
         "        'python -m pip install -r requirements.txt'\n",
         "    ]\n",
@@ -451,20 +454,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# from func.xformers import installXformers\n",
-        "# from func.env import setProxy\n",
-        "# from IPython.display import clear_output\n",
+        "from func.xformers import installXformers\n",
+        "from func.env import setProxy\n",
+        "from IPython.display import clear_output\n",
         "\n",
         "\n",
-        "# try:\n",
-        "#     proxy,region\n",
-        "# except NameError:\n",
-        "#     cb=setProxy()\n",
-        "#     proxy=cb['proxy']\n",
-        "#     region=cb['region']\n",
-        "#     clear_output(wait=True)\n",
+        "try:\n",
+        "    proxy,region\n",
+        "except NameError:\n",
+        "    cb=setProxy()\n",
+        "    proxy=cb['proxy']\n",
+        "    region=cb['region']\n",
+        "    clear_output(wait=True)\n",
         "\n",
-        "# installXformers(proxy,region)"
+        "installXformers(proxy,region)"
       ]
     },
     {
@@ -585,6 +588,7 @@
         "        if stable_diffusion_v2_dir==model_path:\n",
         "            print('stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
         "        else:\n",
+        "            # !cp $stable_diffusion_v2_dir $sd_models_dir\n",
         "            # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
         "            create_symlink(\n",
         "                source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
@@ -676,16 +680,16 @@
         "\n",
         "args += [\n",
         "    f'cd {webUIDir}','&&',\n",
-        "    'pip install \"opencv-python-headless<4.3\" ','&&',\n",
-        "    'pip install triton==2.0.0.dev20221120','&&',\n",
+        "    # 'pip install \"opencv-python-headless<4.3\" ','&&',\n",
+        "    # 'pip install triton==2.0.0.dev20221120','&&',\n",
         "    'python launch.py',\n",
         "    '--share',\n",
-        "    '--opt-split-attention',\n",
-        "    '--port 7860',\n",
+        "    # '--opt-split-attention',\n",
+        "    # '--port 7860',\n",
         "    '--deepdanbooru',\n",
         "    '--administrator',\n",
         "    '--disable-safe-unpickle',\n",
-        "    # '--no-half'\n",
+        "    '--no-half'\n",
         "       ]\n",
         "\n",
         "# try:\n",
@@ -706,6 +710,7 @@
         "    print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
         "    \n",
         "cmd = (\" \").join(args)\n",
+        "print(cmd)\n",
         "\n",
         "!$cmd"
       ]
@@ -713,7 +718,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "4325f2f9-6420-47d1-a31f-46f4eed166e7",
+      "id": "8e17e183-10a8-481c-b5b2-f31b589d76a2",
       "metadata": {},
       "outputs": [],
       "source": []
