auto install xformers and triton nightly version

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -140,7 +140,7 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "    \n",
+        "    \"triton\"\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -442,14 +442,83 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "16a8be98-7ca6-4788-b691-53f1086e3363",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "outputs": [],
       "source": [
         "# (Optional) Makes the build much faster\n",
         "!pip install ninja\n",
         "# Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
-        "!pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
+        "# !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
+        "\n",
+        "xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
+        "\n",
+        "if not os.path.exists(xformers_repo_dir):\n",
+        "    !cd $root_dir &&\\\n",
+        "    git clone https://github.com/facebookresearch/xformers.git\n",
+        "\n",
+        "# \u8bb0\u5f55\u4e00\u6b21\u5b89\u88c5\u6267\u884c\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
+        "!cd $root_dir &&\\\n",
+        "cd xformers &&\\\n",
+        "git show-ref main &&\\\n",
+        "git symbolic-ref -q HEAD &&\\\n",
+        "git submodule update --init --recursive -q &&\\\n",
+        "python setup.py egg_info &&\\\n",
+        "cd xformers.egg-info &&\\\n",
+        "pip install -r requires.txt &&\\\n",
+        "cd .. &&\\\n",
+        "git rev-parse HEAD &&\\\n",
+        "python setup.py bdist_wheel\n",
+        "\n",
         "# (this can take dozens of minutes)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d9eb5f41-4e14-4789-bf98-82fd8d7df6d5",
+      "metadata": {},
+      "source": [
+        "## \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5triton"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fb16b332-9f7e-47ba-ad31-58787c9db902",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "# triton_repo_dir = os.path.join(root_dir,'triton')\n",
+        "\n",
+        "# if not os.path.exists(triton_repo_dir):\n",
+        "#     !cd $root_dir &&\\\n",
+        "#     git clone https://github.com/openai/triton.git\n",
+        "\n",
+        "# !cd $root_dir &&\\\n",
+        "# cd triton/python &&\\\n",
+        "# pip install cmake &&\\\n",
+        "# pip -v install -e ."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "826f655a-689c-4930-bb58-bdad78e89435",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5triton\u7684\u6700\u65b0nightly release"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8304cca8-d28f-4dcf-904b-c8a715e8d973",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install -U --pre triton"
       ]
     },
     {
@@ -901,7 +970,7 @@
         "    '--deepdanbooru',\n",
         "    '--administrator',\n",
         "    '--disable-safe-unpickle',\n",
-        "    '--no-half'\n",
+        "    # '--no-half'\n",
         "       ]\n",
         "\n",
         "try:\n",
@@ -915,11 +984,11 @@
         "        print(f\"\u5df2\u7ecf\u6302\u8f7d\u3010{region}\u3011proxy\")\n",
         "        args.insert(0,f\"{proxy} && env|grep -i proxy &&\")\n",
         "\n",
-        "# if(canUseXformers==True):\n",
-        "#     print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
-        "#     args.append(\"--xformers\")\n",
-        "# else:\n",
-        "#     print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
+        "if(canUseXformers==True):\n",
+        "    print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
+        "    args.append(\"--xformers\")\n",
+        "else:\n",
+        "    print(f\"\u6682\u4e0d\u652f\u6301\u3010{gpu}\u3011\u8be5\u578b\u53f7GPU\uff0c\u4e0d\u4f7f\u7528Xformers\")\n",
         "    \n",
         "cmd = (\" \").join(args)\n",
         "print(cmd)\n",
