install Xformers from source

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -360,7 +360,7 @@
       "id": "bb636268-b393-48f2-81a7-4059b0ab8678",
       "metadata": {},
       "source": [
-        "## <i class=\"fa fa-bolt\"></i> \u5b89\u88c5Xformers"
+        "## <i class=\"fa fa-bolt\"></i> \u5b89\u88c5Xformers\u548ctriton"
       ]
     },
     {
@@ -371,6 +371,145 @@
         "\u5927\u5e45\u51cf\u5c11\u8ba1\u7b97\u65f6\u95f4\u548c\u663e\u5b58\u5360\u7528\uff0c\u4ee3\u4ef7\u662f\u751f\u6210\u7684\u56fe\u6bcf\u4e2a\u90fd\u6709\u70b9\u53d8\u5316\uff0c\u5f3a\u70c8\u63a8\u8350\u5b89\u88c5!  \n",
         "\u4f46\u4e0d\u540c\u6838\u5fc3\u4ee3\u53f7\u7684\u663e\u5361\u9700\u8981\u4e0d\u540c\u7684\u7f16\u8bd1\u5305\uff0c\u4e0d\u80fd\u6df7\u7528  \n",
         "\u5f53\u7136\u6b64\u7b14\u8bb0\u4f1a\u5e2e\u4f60\u81ea\u52a8\u68c0\u6d4b\u8fd9\u53f0\u673a\u5668\u662f\u5426\u9002\u5408\u5b89\u88c5\uff0c\u800c\u4e14\u4f1a\u81ea\u52a8\u5e2e\u4f60\u5b89\u88c5\u5408\u9002\u7684\u7f16\u8bd1\u5305"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "83adc99b-bea1-4e9f-9153-2cbcc281e14b",
+      "metadata": {},
+      "source": [
+        "### \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5Xformers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "16a8be98-7ca6-4788-b691-53f1086e3363",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "import subprocess,os\n",
+        "'''\n",
+        "\u6267\u884c!python -m xformers.info\u547d\u4ee4\u4f1a\u8fd4\u56de\u7c7b\u4f3c\u4ee5\u4e0b\u683c\u5f0f\u7684\u4fe1\u606f\uff0c\u8bf7\u53c2\u8003\n",
+        "\n",
+        "xFormers 0.0.16+bc08bbc.d20230122\n",
+        "memory_efficient_attention.cutlassF:               available\n",
+        "memory_efficient_attention.cutlassB:               available\n",
+        "memory_efficient_attention.flshattF:               available\n",
+        "memory_efficient_attention.flshattB:               available\n",
+        "memory_efficient_attention.smallkF:                available\n",
+        "memory_efficient_attention.smallkB:                available\n",
+        "memory_efficient_attention.tritonflashattF:        available\n",
+        "memory_efficient_attention.tritonflashattB:        available\n",
+        "swiglu.fused.p.cpp:                                available\n",
+        "is_triton_available:                               True\n",
+        "is_functorch_available:                            False\n",
+        "pytorch.version:                                   1.12.1+cu113\n",
+        "pytorch.cuda:                                      available\n",
+        "gpu.compute_capability:                            8.6\n",
+        "gpu.name:                                          NVIDIA GeForce RTX 3090\n",
+        "build.info:                                        available\n",
+        "build.cuda_version:                                1103\n",
+        "build.python_version:                              3.8.13\n",
+        "build.torch_version:                               1.12.1+cu113\n",
+        "build.env.TORCH_CUDA_ARCH_LIST:                    None\n",
+        "build.env.XFORMERS_BUILD_TYPE:                     None\n",
+        "build.env.XFORMERS_ENABLE_DEBUG_ASSERTIONS:        None\n",
+        "build.env.NVCC_FLAGS:                              None\n",
+        "build.env.XFORMERS_PACKAGE_FROM:                   None\n",
+        "source.privacy:                                    open source\n",
+        "'''\n",
+        "\n",
+        "def get_python_version_and_parse():\n",
+        "    # Get the current python version\n",
+        "    version = subprocess.run(['python', '-V'], stdout=subprocess.PIPE).stdout.decode().strip()\n",
+        "    version = version.split(' ')[1]\n",
+        "    major, minor, patch = version.split('.')\n",
+        "    # formatted_version = f'cp{major}{minor[0]}{patch[0]}'\n",
+        "    formatted_version = f'cp{major}{minor[0]}'\n",
+        "    return formatted_version\n",
+        "\n",
+        "\n",
+        "def get_xformers_info():\n",
+        "    output = !python -m xformers.info\n",
+        "    output = '\\n'.join(output)\n",
+        "    info = {}\n",
+        "    for line in output.strip().split('\\n'):\n",
+        "        if ':' in line:\n",
+        "            key, value = line.split(':', 1)\n",
+        "            info[key.strip()] = value.strip()\n",
+        "    return info\n",
+        "\n",
+        "def check_xformers_info(validate_rules):\n",
+        "    info = get_xformers_info()\n",
+        "    for key, value in validate_rules.items():\n",
+        "        if info.get(key) != value:\n",
+        "            if isinstance(value, bool):\n",
+        "                if str(value) != info.get(key):\n",
+        "                    return False\n",
+        "            else:\n",
+        "                return False\n",
+        "    return True\n",
+        "\n",
+        "def find_xformers_whl_and_install(root):\n",
+        "    py_short_ver = get_python_version_and_parse()\n",
+        "    whl_name = f'xformers*{py_short_ver}*.whl'\n",
+        "    whl_path_list = !find $root -name $whl_name\n",
+        "    whl_path_list = list(filter(lambda x: x.endswith('.whl'), whl_path_list))\n",
+        "    print(whl_path_list)\n",
+        "    if whl_path_list:\n",
+        "        \n",
+        "        whl_path = whl_path_list[0]\n",
+        "        !pip install $whl_path\n",
+        "        return whl_path\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "validate_rules = {\n",
+        "    'is_triton_available': True,\n",
+        "    'pytorch.cuda': 'available',\n",
+        "}\n",
+        "\n",
+        "# \u9996\u5148\u5224\u65ad\u672c\u673a\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\u4e86\u53ef\u4ee5\u8fd0\u884c\u7684Xformers\n",
+        "\n",
+        "if check_xformers_info(validate_rules):\n",
+        "    print('Xformers\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u53e6\u5916\u5b89\u88c5\u6216\u7f16\u8bd1')\n",
+        "else:\n",
+        "    # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
+        "    whl_path = find_xformers_whl_and_install('/')\n",
+        "    # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
+        "    if check_xformers_info(validate_rules):\n",
+        "        print(f'\u5b89\u88c5{whl_path}\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
+        "    else:\n",
+        "        print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
+        "        # (Optional) Makes the build much faster\n",
+        "        !pip install ninja\n",
+        "        # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
+        "        # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
+        "\n",
+        "        xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
+        "\n",
+        "        if not os.path.exists(xformers_repo_dir):\n",
+        "            !cd $root_dir &&\\\n",
+        "            git clone https://github.com/facebookresearch/xformers.git\n",
+        "\n",
+        "        # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
+        "        !cd $root_dir &&\\\n",
+        "        cd xformers &&\\\n",
+        "        git show-ref main &&\\\n",
+        "        git symbolic-ref -q HEAD &&\\\n",
+        "        git submodule update --init --recursive -q &&\\\n",
+        "        python setup.py egg_info &&\\\n",
+        "        cd xformers.egg-info &&\\\n",
+        "        pip install -r requires.txt &&\\\n",
+        "        cd .. &&\\\n",
+        "        git rev-parse HEAD &&\\\n",
+        "        python setup.py bdist_wheel\n",
+        "\n",
+        "        # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
+        "        find_xformers_whl_and_install('/')\n"
       ]
     },
     {
@@ -414,64 +553,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from func.xformers import installXformers\n",
-        "from func.env import setProxy\n",
-        "from IPython.display import clear_output\n",
+        "# from func.xformers import installXformers\n",
+        "# from func.env import setProxy\n",
+        "# from IPython.display import clear_output\n",
         "\n",
         "\n",
-        "try:\n",
-        "    proxy,region\n",
-        "except NameError:\n",
-        "    cb=setProxy()\n",
-        "    proxy=cb['proxy']\n",
-        "    region=cb['region']\n",
-        "    clear_output(wait=True)\n",
+        "# try:\n",
+        "#     proxy,region\n",
+        "# except NameError:\n",
+        "#     cb=setProxy()\n",
+        "#     proxy=cb['proxy']\n",
+        "#     region=cb['region']\n",
+        "#     clear_output(wait=True)\n",
         "\n",
-        "installXformers(proxy,region)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "83adc99b-bea1-4e9f-9153-2cbcc281e14b",
-      "metadata": {},
-      "source": [
-        "# \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5Xformers"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "16a8be98-7ca6-4788-b691-53f1086e3363",
-      "metadata": {
-        "scrolled": true
-      },
-      "outputs": [],
-      "source": [
-        "# (Optional) Makes the build much faster\n",
-        "!pip install ninja\n",
-        "# Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
-        "# !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
-        "\n",
-        "xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
-        "\n",
-        "if not os.path.exists(xformers_repo_dir):\n",
-        "    !cd $root_dir &&\\\n",
-        "    git clone https://github.com/facebookresearch/xformers.git\n",
-        "\n",
-        "# \u8bb0\u5f55\u4e00\u6b21\u5b89\u88c5\u6267\u884c\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
-        "!cd $root_dir &&\\\n",
-        "cd xformers &&\\\n",
-        "git show-ref main &&\\\n",
-        "git symbolic-ref -q HEAD &&\\\n",
-        "git submodule update --init --recursive -q &&\\\n",
-        "python setup.py egg_info &&\\\n",
-        "cd xformers.egg-info &&\\\n",
-        "pip install -r requires.txt &&\\\n",
-        "cd .. &&\\\n",
-        "git rev-parse HEAD &&\\\n",
-        "python setup.py bdist_wheel\n",
-        "\n",
-        "# (this can take dozens of minutes)"
+        "# installXformers(proxy,region)"
       ]
     },
     {
@@ -479,7 +574,7 @@
       "id": "d9eb5f41-4e14-4789-bf98-82fd8d7df6d5",
       "metadata": {},
       "source": [
-        "## \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5triton"
+        "### \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5triton"
       ]
     },
     {
@@ -508,7 +603,7 @@
       "id": "826f655a-689c-4930-bb58-bdad78e89435",
       "metadata": {},
       "source": [
-        "## \u5b89\u88c5triton\u7684\u6700\u65b0nightly release"
+        "### \u901a\u8fc7PIP\u5b89\u88c5triton\u7684\u6700\u65b0nightly release"
       ]
     },
     {
